configure styles for preview pane of the CMS

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,9 +2,9 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: "static/images/uploads"
+media_folder: "static/uploads"
 # where found in the published site
-public_folder: "/images/uploads"
+public_folder: "/uploads"
 
 collections:
   - name: "blog"
