--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-typescript": "^2.4.0",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-remark-copy-linked-files": "^2.1.36",
     "gatsby-remark-images": "^3.1.42",
@@ -29,10 +30,12 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "netlify-cms-app": "^2.11.15",
     "node-sass": "^4.13.1",
+    "plotly.js": "^1.53.0",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-plotly.js": "^2.4.0",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
@@ -42,6 +45,10 @@
     "typography-theme-wordpress-kubrick": "^0.16.19"
   },
   "devDependencies": {
+    "@types/node": "^13.13.4",
+    "@types/plotly.js": "^1.50.8",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "prettier": "1.19.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
